Fixed bugs for Posting Rules and CoA API's. Designed and developed Posting Period Policies and related Jobs for automatic switching of Posting periods and accurate accounting entries.